--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,7 @@ jobs:
           
       - name: Upload Bandit results artifact
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: bandit-results
           path: bandit_results.json
