--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,15 +34,7 @@ jobs:
       - name: Run flake8 linting
         run: |
           pip install flake8
-          flake8 . --exit-zero
-
-      # Шаг 3.2: Загружаем отчет flake8 как артефакт
-      - name: Upload flake8 results artifact
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: flake8-results
-          path: flake8_results.txt
+          flake8 . > flake8_results.txt || true
 
       # Шаг 4: Запускаем SAST-сканер (Bandit) для анализа исходного кода
       - name: Run Bandit SAST Scan
