--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Run flake8 linting
         run: |
           pip install flake8
-          flake8 . > flake8_results.txt || true
+          flake8 . --exit-zero
+          
 
       # Шаг 4: Запускаем SAST-сканер (Bandit) для анализа исходного кода
       - name: Run Bandit SAST Scan
