added uploading build task artifacts

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -107,6 +107,12 @@ jobs:
       - name: Build the package
         run: |
           python -m build
+     
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-artifacts
+          path: dist/
 
       - name: List build artifacts
         run: ls -la dist/
